<resources>
    <string name="activity_main_name">Rock, Paper, Scrissors</string>
    <string name="activity_history_name">Your Game History</string>
    <string name="action_settings">Settings</string>
    <string name="your_game_history">Your Game History</string>
    <string name="title_activity_history">History</string>
    <string name="history">History</string>
    <string name="welcome">Welcome</string>
    <string name="instructions">Instructions: select rock, paper or scissors to play.</string>
    <string name="vs">VS</string>
    <string name="computer">Computer</string>
    <string name="you">You</string>
</resources>
