<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.MainActivity"
    tools:showIn="@layout/activity_main">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilProduct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toTopOf="@id/tilQuantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.75">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="What to buy?"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilQuantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="136dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.75">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="How many?"
            android:inputType="number"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnGoHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/history"
        app:layout_constraintBottom_toTopOf="@+id/ibScissors"
        app:layout_constraintEnd_toEndOf="@+id/ibScissors"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="@+id/ibScissors" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <ImageButton
        android:id="@+id/ibRock"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:padding="5dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rock" />

    <ImageButton
        android:id="@+id/ibPaper"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:padding="5dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ibScissors"
        app:layout_constraintStart_toEndOf="@+id/ibRock"
        app:srcCompat="@drawable/paper" />

    <ImageButton
        android:id="@+id/ibScissors"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:padding="5dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/scissors" />

    <ImageView
        android:id="@+id/ivComputer"
        android:layout_width="123dp"
        android:layout_height="129dp"
        android:layout_marginTop="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOutcome"
        app:srcCompat="@drawable/default_rock" />

    <ImageView
        android:id="@+id/ivYou"
        android:layout_width="123dp"
        android:layout_height="129dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOutcome"
        app:srcCompat="@drawable/default_rock" />

    <TextView
        android:id="@+id/tvVs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/vs"
        app:layout_constraintEnd_toStartOf="@+id/ivYou"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toEndOf="@+id/ivComputer"
        app:layout_constraintTop_toBottomOf="@+id/tvOutcome" />

    <TextView
        android:id="@+id/tvOutcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInstructions" />

    <TextView
        android:id="@+id/tvComputer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/computer"
        app:layout_constraintEnd_toEndOf="@+id/ivComputer"
        app:layout_constraintStart_toStartOf="@+id/ivComputer"
        app:layout_constraintTop_toBottomOf="@+id/ivComputer" />

    <TextView
        android:id="@+id/tvYou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/you"
        app:layout_constraintEnd_toEndOf="@+id/ivYou"
        app:layout_constraintStart_toStartOf="@+id/ivYou"
        app:layout_constraintTop_toBottomOf="@+id/ivYou" />

</androidx.constraintlayout.widget.ConstraintLayout>